app/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: translation-api
  labels:
    app: translation-api
    service: translation-api
spec:
  ports:
    - port: 5000
      name: "5000"
  selector:
    app: translation-api
