app/deploy/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: translation-api-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
      number: 15443
      name: "15443"
      protocol: HTTP
  hosts:
  - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: translation-api
spec:
  hosts:
  - "*"
  gateways:
  - translation-api-gateway
  http:
    - match:
      - uri:
        prefix: /api
      route:
        - destination:
          host: translation-api
          port:
            number: 5000
